# rad

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  875.bugfix.rst  CHANGES.rst  CONTRIBUTING.rst  README.md  guidewindow-1.0.0.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: archive.yml  build.yml  changelog.yml  ci.yml  ci_cron.yml  publish-to-pypi.yml  release.yml  tests.yml  tests_extra.yml
changes/: 446.doc.rst  448.feature.rst  452.feature.rst  458.doc.rst  462.feature.rst  466.misc.rst  467.misc.rst  469.misc.rst  471.misc.rst  473.misc.rst  474.misc.rst  475.misc.rst  476.misc.rst  477.misc.rst  478.misc.rst  479.misc.rst  480.misc.rst  481.misc.rst  485.removal.rst  487.misc.rst  490.feature.rst  498.misc.rst  499.feature.rst  505.feature.rst  506.misc.rst  507.misc.rst  508.misc.rst  509.misc.rst  510.misc.rst  513.feature.rst  514.doc.rst  516.misc.rst  520.misc.rst  524.skycell.rst  525.bugfix.rst  527.feature.rst  528.doc.rst  528.feature.rst  532.bugfix.rst  536.feature.rst  (+133 more)
docs/: archive.rst  ccsp.rst  conf.py  creating.rst  ground_tests.rst  helper.rst  index.rst  manifests.rst  reference_files.rst  schemas.rst  source_catalogs.csv  source_catalogs.rst  ssc.rst  versioning.rst
latest/: basic.yaml  cal_logs.yaml  cal_step_flag.yaml  common.yaml  coordinates.yaml  datamodels.yaml  exposure.yaml  exposure_type.yaml  forced_catalog_table.yaml  forced_image_source_catalog.yaml  forced_mosaic_source_catalog.yaml  forced_multiband_source_catalog.yaml  forced_source_catalog.yaml  fps.yaml  guidestar.yaml  guidewindow.yaml  guidewindow_modes.yaml  image_source_catalog.yaml  individual_image_meta.yaml  l1_detector_guidewindow.yaml  l1_face_guidewindow.yaml  l2_cal_step.yaml  l3_basic.yaml  l3_cal_step.yaml  l3_common.yaml  mosaic_basic.yaml  mosaic_segmentation_map.yaml  mosaic_source_catalog.yaml  msos_stack.yaml  multiband_catalog.yaml  multiband_catalog_table.yaml  multiband_segmentation_map.yaml  multiband_source_catalog.yaml  observation.yaml  photometry.yaml  pointing.yaml  program.yaml  prompt_catalog_table.yaml  rad_schema.yaml  ramp.yaml  (+20 more)
latest/CCSP/: ccsp_custom_product.yaml  ccsp_minimal.yaml
latest/CCSP/EXAMPLE/: custom_product.yaml  derived_mosaic.yaml  example_custom_product.yaml  example_derived_mosaic.yaml
latest/CCSP/HLIS/: shear_image.yaml
latest/CGI/: cgi_ancillary.yaml  cgi_level_1.yaml  cgi_level_2a.yaml  cgi_level_2b.yaml  cgi_level_3.yaml  cgi_level_4.yaml
latest/CGI/keywords/: cgi_ancillary.yaml  cgi_common.yaml  cgi_exposure.yaml  cgi_mechanism_named_settings.yaml  cgi_pointing.yaml  cgi_region.yaml  cgi_states.yaml  cgi_visit.yaml  ssc_basic.yaml
latest/PIT/: ccsp_mast_metadata.yaml  ccsp_minimal.yaml  pit_basic-1.0.0.yaml  pit_basic.yaml  pit_common-1.0.0.yaml  pit_common.yaml
latest/PIT/HLIS/: shear_image-1.0.0.yaml  shear_image.yaml
latest/SSC/: ssc_basic.yaml
latest/SSC/CGI/: cgi_ancillary.yaml  cgi_level_1.yaml  cgi_level_2a.yaml  cgi_level_2b.yaml  cgi_level_3.yaml  cgi_level_4.yaml
latest/SSC/GDPS/: wfi_spec_catalog_dqa_level_4.yaml  wfi_spec_catalog_level_4.yaml  wfi_spec_combined_1d_level_4.yaml  wfi_spec_data_quality_level_4.yaml  wfi_spec_decontam_2d_level_4.yaml  wfi_spec_decontaminated_2d_level_4.yaml  wfi_spec_dqa_2d_level_4.yaml  (+3 more)
latest/enums/: cal_step_flag.yaml  exposure_type.yaml  guidewindow_modes.yaml  wfi_detector.yaml  wfi_optical_element.yaml
latest/fps/: basic.yaml  cal_step.yaml  common.yaml  exposure.yaml  exposure_type.yaml  groundtest.yaml  guidestar.yaml  guidewindow_modes.yaml  ref_file.yaml  wfi_detector.yaml  wfi_mode.yaml  wfi_optical_element.yaml
latest/manifests/: datamodels.yaml  static.yaml
latest/meta/: basic.yaml  cal_logs.yaml  calibration_software_name.yaml  calibration_software_version.yaml  catalog_image.yaml  common.yaml  coordinates.yaml  ephemeris.yaml  exposure.yaml  file_date.yaml  filename.yaml  guide_window_id.yaml  guidestar.yaml  guidewindow_common.yaml  individual_image_meta.yaml  l2_cal_step.yaml  l2_catalog_common.yaml  l3_association.yaml  l3_cal_step.yaml  l3_catalog_common.yaml  l3_common.yaml  l3_resample.yaml  l3_wcsinfo.yaml  model_type.yaml  mosaic_basic.yaml  observation.yaml  origin.yaml  outlier_detection.yaml  photometry.yaml  pointing.yaml  prd_version.yaml  product_type.yaml  program.yaml  rcs.yaml  ref_file.yaml  sdf_software_version.yaml  sky_background.yaml  source_catalog.yaml  statistics.yaml  telescope.yaml  (+4 more)
latest/reference_files/: abvegaoffset.yaml  apcorr.yaml  dark.yaml  darkdecaysignal.yaml  detectorstatus.yaml  distortion.yaml  epsf.yaml  etc.yaml  flat.yaml  gain.yaml  integralinverselinearity.yaml  integralnonlinearity.yaml  inverselinearity.yaml  ipc.yaml  linearity.yaml  mask.yaml  matable.yaml  pixelarea.yaml  readnoise.yaml  ref_common.yaml  ref_exposure_type.yaml  ref_optical_element.yaml  refpix.yaml  saturation.yaml  skycells.yaml  superbias.yaml  wfi_img_photom.yaml
latest/tables/: forced_catalog_table.yaml  multiband_catalog_table.yaml  prompt_catalog_table.yaml  source_catalog_columns.yaml
latest/tagged_scalars/: sdf_software_version.yaml  telescope.yaml
latest/tvac/: basic.yaml  cal_step.yaml  common.yaml  exposure.yaml  exposure_type.yaml  groundtest.yaml  guidestar.yaml  guidewindow_modes.yaml  ref_file.yaml  wfi_detector.yaml  wfi_mode.yaml  wfi_optical_element.yaml
scripts/: archive.py  insert_next_release  insert_next_release.py  rad_version.py  set_release_date  set_release_date.py  update_view.tcss
scripts/helper/: _app.py  _edit.py  _frozen.py  _manager.py  _resource.py  _screen.py
src/: integration.py
src/rad/: __init__.py  _source_catalogs.py  _super_schema.py  _tag_associations.py  constructors.py  integration.py
tests/: conftest.py  test_destinations.py  test_integration.py  test_latest.py  test_manifest.py  test_moc_metadata.py  test_schemas.py  test_source_catalogs.py  test_versioning.py
tests/reader/: conftest.py  test_basic.py  test_link.py  test_manager.py  test_reader.py  test_schema.py  test_type.py
(+585 files in other folders)
