[project]
name = "rad"
description = "Roman Attribute Dictionary"
requires-python = ">=3.11"
authors = [
    { name = "STScI", email = "help@stsci.edu" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "asdf >=2.15.2",
    "asdf-astropy >=0.5.0",
]
dynamic = [
    "version",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-doctestplus>=1.2.1",
    "crds>=11.16.16",
]
docs = [
    "sphinx",
    "sphinx-asdf>=0.1.3",
    "sphinx-astropy",
    "sphinx-rtd-theme",
    "astropy>=5.0.4",
    "graphviz",
    "matplotlib",
    "docutils",
    "importlib-metadata",
    "towncrier",
]

[project.urls]
"Bug Tracker" = "https://github.com/spacetelescope/rad/issues"
"Source Code" = "https://github.com/spacetelescope/rad"

[project.entry-points."asdf.resource_mappings"]
rad = "rad.integration:get_resource_mappings"

[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm[toml] >=3.4",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/rad/_version.py"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.package-data]
"rad.resources" = [
    "manifests/*.yaml",
    "schemas/*.yaml",
    "schemas/**/*.yaml",
]

[tool.pytest.ini_options]
minversion = 7.0
doctest_plus = true
doctest_rst = true
text_file_format = "rst"
log_cli_level = "INFO"
xfail_strict = true
addopts = [
    "--color=yes",      # color test output
    "--doctest-rst",    # enable doctests
    "--strict-config",  # fail on unknown config options
    "--strict-markers", # fail on unknown markers
    "-ra",              # Show summary of all failures/errors
]
testpaths = [
    "tests",
    "src/rad/resources/schemas",
]
filterwarnings = [
    "error",
]
asdf_schema_tests_enabled = "true"
asdf_schema_skip_tests = "src/rad/resources/schemas/rad_schema-1.0.0.yaml"
asdf_schema_root = "src/rad/resources/schemas"

[tool.ruff]
line-length = 130

[tool.ruff.lint]
extend-select = [
    "UP",   # PyUpgrade
    "I",    # isort
    "B",    # BugBear
    "S",    # Bandit
    "RUF",  # ruff specific
    "NPY",  # numpy specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101" # Bandit: Use of assert detected (fine in test files)
]

[tool.codespell]
skip = "*.pdf,*.fits,*.asdf,.tox,build,./tags,.git,docs/_build"

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes"
package = "rad"
title_format = "{version} ({project_date})"
ignore = [".gitkeep"]
wrap = true
issue_format = "`#{issue} <https://github.com/spacetelescope/rad/issues/{issue}>`_"

[tool.towncrier.fragment.feature]
name = "New Features"

[tool.towncrier.fragment.bugfix]
name = "Bug Fixes"

[tool.towncrier.fragment.doc]
name = "Documentation"

[tool.towncrier.fragment.removal]
name = "Deprecations and Removals"

[tool.towncrier.fragment.misc]
