[project]
name = "rad"
description = "Roman Attribute Dictionary"
requires-python = ">=3.11"
authors = [{ name = "STScI" }]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Programming Language :: Python :: 3",
]
dependencies = ["asdf >=4.1.0", "asdf-astropy >=0.5.0"]
license-files = ["LICENSE"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-doctestplus>=1.2.1",
  "pytest-asdf-plugin>=0.1.0",
  "crds>=12.0.4",
  "GitPython>=3.1.44",
  "semantic-version>=2.10.0",
  "textual>=3.1",
  "deepdiff>=8.1",
]
docs = [
  "sphinx",
  "sphinx-asdf>=0.1.3",
  "sphinx-astropy",
  "sphinx-rtd-theme",
  "astropy>=5.0.4",
  "graphviz",
  "matplotlib",
  "docutils",
  "importlib-metadata",
  "towncrier",
]

[project.urls]
"Bug Tracker" = "https://github.com/spacetelescope/rad/issues"
"Source Code" = "https://github.com/spacetelescope/rad"

[project.entry-points."asdf.resource_mappings"]
rad = "rad.integration:get_resource_mappings"

[build-system]
requires = ["setuptools >=61", "setuptools_scm[toml] >=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/rad/_version.py"
version_scheme = "release-branch-semver"

[tool.setuptools.packages.find]
where = ["src"]

[tool.rad-versioning]
base_release = "0.25.0"

[tool.pytest.ini_options]
minversion = "7.0"
doctest_plus = true
doctest_rst = true
text_file_format = "rst"
log_cli_level = "INFO"
xfail_strict = true
addopts = [
  "--color=yes",      # color test output
  "--doctest-rst",    # enable doctests
  "--strict-config",  # fail on unknown config options
  "--strict-markers", # fail on unknown markers
  "-ra",              # Show summary of all failures/errors
]
testpaths = ["tests", "src/rad/resources/schemas"]
filterwarnings = ["error"]
asdf_schema_tests_enabled = "true"
asdf_schema_skip_tests = ["src/rad/resources/schemas/rad_schema-1.0.0.yaml"]
# All the SSC schemas with a $ref have to be xfailed due to asdf-format/pytest-asdf-plugin#9
asdf_schema_xfail_tests = [
  "src/rad/resources/schemas/SSC/CGI/cgi_ancillary-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/CGI/cgi_level_1-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/CGI/cgi_level_2a-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/CGI/cgi_level_2b-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/CGI/cgi_level_3-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/CGI/cgi_level_4-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/GDPS/wfi_spec_catalog_level_4-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/GDPS/wfi_spec_combined_1d_level_4-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/GDPS/wfi_spec_data_quality_level_4-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/GDPS/wfi_spec_decontaminated_2d_level_4-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/GDPS/wfi_spec_individual_1d_level_4-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/GDPS/wfi_spec_location_table_level_4-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/MSOS/wfi_microlensing_event_catalog_level_4-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/MSOS/wfi_microlensing_light_curve_catalog_level_4-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/MSOS/wfi_microlensing_object_catalog_level_4-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/MSOS/wfi_microlensing_reference_frame_level_3-1.0.0.yaml",
  "src/rad/resources/schemas/SSC/MSOS/wfi_microlensing_variability_catalog_level_4-1.0.0.yaml",
]
asdf_schema_root = "src/rad/resources/schemas"

[tool.ruff]
line-length = 130

[tool.ruff.lint]
extend-select = [
  "UP",  # PyUpgrade
  "I",   # isort
  "B",   # BugBear
  "S",   # Bandit
  "RUF", # ruff specific
  "NPY", # numpy specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "S101", # Bandit: Use of assert detected (fine in test files)
]

[tool.codespell]
skip = "*.pdf,*.fits,*.asdf,.tox,build,./tags,.git,docs/_build"

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes"
package = "rad"
title_format = "{version} ({project_date})"
ignore = [".gitkeep"]
wrap = true
issue_format = "`#{issue} <https://github.com/spacetelescope/rad/issues/{issue}>`_"

[tool.towncrier.fragment.feature]
name = "New Features"

[tool.towncrier.fragment.bugfix]
name = "Bug Fixes"

[tool.towncrier.fragment.doc]
name = "Documentation"

[tool.towncrier.fragment.removal]
name = "Deprecations and Removals"

[tool.towncrier.fragment.misc]
