[metadata]
name = romanad
description = Roman Attribute Dictionary
long_description = file: README.md
long_description_content_type = text/markdown
author = STScI
license = BSD-3-Clause
url = https://github.com/spacetelescope/rad
project_urls =
    Bug Tracker = https://github.com/spacetelescope/rad/issues
    Source Code = https://github.com/spacetelescope/rad
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = True
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    asdf >= 2.8.0
package_dir =
    =src
packages = find:

[options.entry_points]
asdf.resource_mappings =
    rad = rad.integration:get_resource_mappings

[options.package_data]
rad.resources = manifests/*.yaml, schemas/*.yaml, schemas/**/*.yaml

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=4.6.0
    pytest-openfiles>=0.5.0

[flake8]
max-line-length = 130
ignore = E203, W503, W504, W605, E741

[tool:pytest]
asdf_schema_tests_enabled = true
asdf_schema_skip_tests =
    src/rad/resources/schemas/rad_schema-1.0.0.yaml
asdf_schema_root = src/rad/resources/schemas
minversion = 4.6
text_file_format = rst
addopts = --show-capture=no --open-files
testpaths =
    tests
    src/rad/resources/schemas
